# nix-vscode-extensions

./: .env  .envrc  .gitignore  .markdownlint.jsonc  AGENTS.md  LICENSE  README.md  cabal.project  config.yaml  declare-openvsx.ts  default.nix  extra-extensions.toml  flake.nix  mkExtension.nix  nix-utils.ts  nvfetch-open-vsx.toml  open-vsx-api.ts  open-vsx-extensions.toml  overrides.nix  pyproject.toml  removed.nix  script.sh
.github/: config.yaml  settings.yml
extensions/: default.nix  lib.nix
haskell/: .env  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  config.yaml  default.nix  flake.nix  fourmolu.yaml  nix-managed.cabal  package.yaml  questions.md  requests.sh  updater.cabal
hs/: .env  .envrc  .ghcid  .gitignore  .markdownlint.jsonc  LICENSE  README.md  cabal.project  config.json  config.yaml  flake.nix  fourmolu.yaml  nix-managed.cabal  (+1 more)
rust/: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
rust/src/: cache.rs  config.rs  lib.rs  logging.rs  main.rs  marketplace.rs  model.rs  pipeline.rs  prefetch.rs
rust/tests/: cache.rs  integration.rs  model_serde.rs  model_serde_marketplace.rs  pipeline.rs  pipeline_cache.rs  pipeline_logging.rs  pipeline_prerelease.rs  pipeline_retry.rs  prefetch.rs
rust/tests/fixtures/: ms-vscode-cpptools-latest.json  ms-vscode-cpptools-release.json  open-vsx-release.json  rust-lang-rust-analyzer-latest.json  rust-lang-rust-analyzer-release.json  vscode-adacore-ada-latest.json  vscode-adacore-ada-release.json  vscode-latest.json
rust/tests/pipeline/: assertions.rs  mod.rs  support.rs
rust/tests/support/: mod.rs
(+83 files in other folders)
