[tool.poetry]
name = "vscodium-extensions"
version = "0.1.0"
description = ""
authors = ["Danila Danko <br4ch1st0chr0n3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
mypy = "^0.982"
black = "^22.10.0"
numpy = "^1.23.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
