[package]
name = "nix-vscode-extensions-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anstream = "0.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "gzip", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }

[dev-dependencies]
tempfile = "3"
